--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>Top Root</h1>
-    <div id="root">
-        <h1>PCS </h1>
-    </div>
-    <h1>Below Root</h1>
+    <!-- <h1>Top Root</h1> -->
+    <div id="root"></div>
+        <!-- <h1>PCS </h1>
+    </div> -->
+    <!-- <h1>Below Root</h1> -->
     <!-- <script>
         const heading = document.createElement("h1");
         heading.innerHTML = "Hello from js"
